# terminal-agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  ui.py  viz.py
agent/: graph.py  nodes.py  state.py
termagent/: audio.py  ui.py
termagent/agent/: coder_graph.py  coder_nodes.py  graph.py  mcp_client.py  nodes.py  state.py  tools.py
