[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["termagent*"]

[project]
name = "termagent-cli"
version = "0.2.0"
description = "Natural language terminal agent for Windows PowerShell"
requires-python = ">=3.10"
dependencies = [
    "langchain-groq",
    "langchain-core",
    "langchain",
    "langgraph",
    "pydantic",
    "python-dotenv",
    "ollama",
    "textual",
    "rich",
]

[project.scripts]
termagent = "termagent.ui:main"