[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["termagent*"]

[project]
name = "termagent-cli"
version = "1.0.1"
description = "Natural language terminal agent for Windows PowerShell"
readme = "package_info.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-groq",
    "langchain-core",
    "langchain",
    "langgraph",
    "pydantic",
    "python-dotenv",
    "ollama",
    "textual",
    "rich",
    "ddgs",
    "mcp",
    "sounddevice",
    "scipy"
]

[project.scripts]
termagent = "termagent.ui:main"